--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 git+https://github.com/boudinfl/pke.git@ab01b94c19f8c5e23cb65f2a3a24950dd2b86083
 nltk
+spacy==2.3.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz#egg=en_core_web_sm
+pycld2
 pytest
 progress
 dask
@@ -7,4 +10,5 @@ distributed
 dask-jobqueue
 streamz
 pyArango
+pyahocorasick
 intervaltree
