Ignore OS and IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,11 @@ coverage.xml
 temp/
 *.egg-info/
 
+# KDE (Dolphin)
+.directory
+
+# Microsoft Visual Studio Code
+.vscode
 
 # Flask stuff:
 instance/
