--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ distributed==2021.3.0
 intervaltree==3.1.0
 nltk==3.6.1
 git+https://github.com/boudinfl/pke.git@aa7df17214252b6bab2f1988eba89fdce8050818
-progress==1.5
 pyahocorasick==1.4.2
 pyArango==1.3.4
 pycld2==0.41
@@ -12,3 +11,4 @@ spacy==3.0.5
 https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.0.0/en_core_web_lg-3.0.0.tar.gz#egg=en_core_web_lg
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
 streamz==0.6.2
+tqdm==4.59.0
