Make isort compatible with black

--- a/tox.ini
+++ b/tox.ini
@@ -19,4 +19,4 @@ deps =
     isort==5.7.0
 
 commands =
-    isort --check --diff scicopia_tools/
+    isort -m 3 --tc --check --diff scicopia_tools/
